# themis-imager-readfile

./: LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml  test_linux.yml  test_macos.yml  test_windows.yml
idl/: README.md  themis_imager_readfile_first_frame.pro  themis_imager_readfile_new.pro  themis_imager_readfile_no_meta.pro
idl/tools/: dir_exist.pro  percentiles.pro  tag_exist.pro
python/: .editorconfig  .flake8  .gitignore  .pycodestyle  Makefile  README.md  pyproject.toml
python/examples/: .gitignore  read_themis_data.ipynb
python/tests/single_tests/: .gitignore  test_memory.py
python/tests/test_suite/: test_read.py  test_version.py
python/tests/test_suite/data/: 20140310_0605_gill_themis19_full.pgm
python/themis_imager_readfile/: __init__.py  _themis.py
python/tools/: bump_version.py
