[tool.poetry]
name = "themis-imager-readfile"
version = "1.1.1"
description = "Read functions for THEMIS ASI PGM raw files"
readme = "README.md"
homepage = "https://github.com/ucalgary-aurora/themis-imager-readfile"
repository = "https://github.com/ucalgary-aurora/themis-imager-readfile"
authors = ["Darren Chaddock <dchaddoc@ucalgary.ca>"]
license = "MIT"
packages = [
    { include = "themis_imager_readfile" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
flake8 = "^6.0.0"
pylint = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
